Front del Login.

--- a/src/app/core/components/login/login.component.html
+++ b/src/app/core/components/login/login.component.html
@@ -1,3 +1,50 @@
-<p>
-  login works!
-</p>
+<div id="contenedor-login" class="col-sm-12">
+  <div class="row">
+    <div class="col-sm-6" style="text-align: center;">
+      <img id="logo_imd" src="src\assets\logos\logo_imd.png" height="auto" width="60%" alt="logo_imd">
+
+    </div>
+    <div class="col-sm-6 d-flex align-items-center" style="border-left: 1px solid rgb(117, 119, 117)">
+      <div class="col-sm-12">
+
+      
+      <div class="form-group col-sm-6" style="text-align: center">
+        <img src="src\assets\logos\logo_imd_app.png" height="auto" width="100px" alt="logo_imd_app">
+          <h5 style="color: rgb(133, 130, 130)">Ingresar con IMDCuenta</h5>
+          
+
+      </div>
+      <form action="">
+      <div class="form-group col-sm-6">
+        <input type="text"
+          class="form-control " name="" id="" aria-describedby="helpId" placeholder="Usuario">
+      </div>
+      <div class="form-group col-sm-6">
+        <input type="password"
+          class="form-control" name="" id="" aria-describedby="helpId" placeholder="Contraseña***">
+        </div>
+        <div class="form-group col-sm-6">
+            <div class="row">
+                <div class="form-group col-sm-4">
+                    <button class="btn btn-outline-danger" (click)='goToHome()'>Ingresar</button>
+
+                  </div>
+                  <div class="form-group col-sm-8" style="margin-top: 5px;">
+                      <a href="" >Crear cuenta nueva.</a>
+
+                    </div>
+
+            </div>
+            <small style="color: rgb(119, 121, 119)">            Al dar click en crear cuenta estas aceptando los <b> términos y condiciones</b> de nuestra compañía.
+            </small>
+
+
+        </div>
+      </form>
+      </div>
+  </div>
+  </div>
+</div>
+
+
+
