--- a/src/app/core/components/login/login.component.scss
+++ b/src/app/core/components/login/login.component.scss
@@ -1,5 +1,5 @@
-#contenedor-login {
-    padding-top: 100px;
+#contenedorLogin {
+    padding-top: 50px;
     background-color: rgb(218, 214, 214);
     width: 100%;
     min-height: 100%;
@@ -9,14 +9,22 @@
     left:0;
 }
 
+#contenedorInputs {
+    border-left: 1px solid rgb(117, 119, 117);
+}
+
 @media only screen and (max-width: 600px) {
 
-    #contenedor-login {
-        padding-top: 0px;
+    #contenedorLogin {
+        padding-top: 20px;
     }
 
-    #logo_imd {
-        width: 100px;
-        height: 100px;
+    #contenedorImgIntro {
+        display: none;
     }
+
+    #contenedorInputs {
+        border-left: 0px;
+    }
+
 }
