Estructura y creación de Header.

--- a/src/app/core/components/home/home.component.html
+++ b/src/app/core/components/home/home.component.html
@@ -1,4 +1,9 @@
-<p>
-  home works!
-</p>
-<router-outlet></router-outlet>
+<div id="homeContainer">
+  <app-header></app-header>
+  <div id="homeBody">
+      <router-outlet></router-outlet>
+  </div>
+  
+</div>
+
+
