--- a/src/app/core/components/home/home.component.scss
+++ b/src/app/core/components/home/home.component.scss
@@ -1,8 +1,10 @@
 #homeContainer {
     width: 80%;
     margin-left: auto;
-  margin-right: auto
+    margin-right: auto;
 }
+
 #homeBody {
     margin-top: 80px;
 }
+
