--- a/src/app/core/modules/client/home-client/home-client.component.html
+++ b/src/app/core/modules/client/home-client/home-client.component.html
@@ -22,11 +22,11 @@
     </div>
     <div class="col-sm-2">
       <button type="submit" class="btn btn-info" (click)="showTable()"><i class="fa fa-search"></i></button>
-      <button class="btn btn-outline-info" style="margin-left: 3px;" *ngIf="showMapButton"><i class="fa fa-map"></i></button>
+      <button class="btn btn-outline-info" style="margin-left: 3px;" *ngIf="showMapButton" data-toggle="modal" data-target=".bd-example2-modal-lg"><i class="fa fa-map"></i></button>
     </div>
   </div>
   <div class="col-sm-12" *ngIf="show" style="margin-bottom: 10px;">
-    <table class="table">
+    <table class="table" >
       <thead>
         <tr>
           <th scope="col"># Reg</th>
@@ -35,40 +35,71 @@
           <th scope="col">Foto</th>
         </tr>
       </thead>
-      <tbody>
+      <tbody *ngFor="let n of dataArray, let i = index">
         <tr>
-          <th scope="row">1</th>
-          <td>2105 - Victor Valdez Muñoz</td>
-          <td>001 - Familia</td>
-          <td><a href=""><i class="fa fa-image"></i></a></td>
-        </tr>
-        <tr>
-          <th scope="row">2</th>
-          <td>2006 - Adriana Quartas Rojas</td>
-          <td>003 - J & J</td>
-          <td><a href=""><i class="fa fa-image"></i></a></td>
-        </tr>
-        <tr>
-          <th scope="row">3</th>
-          <td>2204 - Mauricio Lopez Castañeda</td>
-          <td>002 - Natipan</td>
-          <td><a href=""><i class="fa fa-image"></i></a></td>
-        </tr>
-        <tr>
-          <th scope="row">4</th>
-          <td>2503 - Lina Gomez Salas</td>
-          <td>006 - El Caribe</td>
-          <td><a href=""><i class="fa fa-image"></i></a></td>
-        </tr>
-        <tr>
-          <th scope="row">5</th>
-          <td>2407 - Carlos Isaza Casas</td>
-          <td>005 - Axion</td>
-          <td><a href=""><i class="fa fa-image"></i></a></td>
+          <th scope="row">{{i+1}}</th>
+          <td>{{n.vendedor}}</td>
+          <td>{{n.proveedor}}</td>
+          <td><a href="" data-toggle="modal" data-target=".bd-example-modal-lg"><i class="fa fa-image"></i></a></td>
         </tr>
       </tbody>
     </table>
     <button type="button" class="btn btn-danger"><i class="fa fa-print"></i></button>
     <button type="button" class="btn btn-success" style="margin-left: 5px;"><i class="fa fa-file-excel-o"></i></button>
+  </div>
+
+  
+
+
+  <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title"><i class="fa fa-image"></i> [Reg#] Galeria de Fotos.</h5>
+        </div>
+        <div class="modal-body">
+          <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+              <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img class="d-block w-100" src="src/assets/fotos/m1.jpg" alt="First slide" height="400px" width="300px">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="src/assets/fotos/m2.jpg" alt="Second slide" height="400px" width="300px">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="src/assets/fotos/m3.jpg" alt="Third slide" height="400px" width="300px">
+              </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="modal fade bd-example2-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title"><i class="fa fa-map-marker"></i> TRAZADO DE RUTAS RECORRIDAS</h5>
+        </div>
+        <div class="modal-body">
+          <img src="src/assets/img/map.png" alt="" width="100%" height="400px">
+        </div>
+      </div>
+    </div>
   </div>
 </div>
