--- a/src/app/core/shared/header/header.component.html
+++ b/src/app/core/shared/header/header.component.html
@@ -9,7 +9,7 @@
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
         <li class="nav-item active">
-          <a class="nav-link" href="#"><i class="fa fa-home fa-2x"></i> <span class="sr-only">(current)</span></a>
+          <a class="nav-link" [routerLink]="['/home']" routerLinkActive="router-link-active" ><i class="fa fa-home fa-2x"></i> <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" [routerLink]="['']" routerLinkActive="router-link-active" ><i class="fa fa-download fa-2x "></i></a>
