Reestruturacion y creacion modulo compartido, modal compartido con inyección de array.

--- a/src/app/core/components/home/home.component.html
+++ b/src/app/core/components/home/home.component.html
@@ -1,5 +1,5 @@
 <div id="homeContainer">
-  <app-header></app-header>
+  <app-header [type]="currentPath"></app-header>
   <div id="homeBody">
     <router-outlet></router-outlet>
   </div>
