--- a/src/app/core/modules/seller/home-seller/home-seller.component.html
+++ b/src/app/core/modules/seller/home-seller/home-seller.component.html
@@ -1,5 +1,5 @@
 <div class="col-sm-12" style="padding: 20px 20px;">
-  <h3><i class="fa fa-pencil"></i> Construir consulta</h3>
+  <h3><i class="fa fa-cogs"></i> Construir consulta</h3>
 </div>
 <div class="col-sm-12">
   <div class="row">
