--- a/src/app/core/modules/client/home-client/home-client.component.html
+++ b/src/app/core/modules/client/home-client/home-client.component.html
@@ -22,11 +22,12 @@
     </div>
     <div class="col-sm-2">
       <button type="submit" class="btn btn-info" (click)="showTable()"><i class="fa fa-search"></i></button>
-      <button class="btn btn-outline-info" style="margin-left: 3px;" *ngIf="showMapButton" data-toggle="modal" data-target=".bd-example2-modal-lg"><i class="fa fa-map"></i></button>
+      <button class="btn btn-outline-info" style="margin-left: 3px;" *ngIf="showMapButton" data-toggle="modal"
+        data-target=".bd-example2-modal-lg"><i class="fa fa-map"></i></button>
     </div>
   </div>
   <div class="col-sm-12" *ngIf="show" style="margin-bottom: 10px;">
-    <table class="table" >
+    <!-- <table class="table" >
       <thead>
         <tr>
           <th scope="col"># Reg</th>
@@ -43,9 +44,40 @@
           <td><a href="" data-toggle="modal" data-target=".bd-example-modal-lg"><i class="fa fa-image"></i></a></td>
         </tr>
       </tbody>
-    </table>
+    </table> -->
+    <p-table #dt [columns]="cols" [value]="dataArray" [paginator]="true" [rows]="10" exportFilename="info-clientes">
+      <ng-template pTemplate="caption">
+        <div class="header-table">
+          <div class="export-button">
+            <button type="button" class="btn btn-success" pButton icon="fa fa-file-o" iconPos="left" label="Exportar CSV" (click)="dt.exportCSV()"></button>
+          </div>
+          <div class="search-option">
+            <i class="fa fa-search" style="margin:4px 4px 0 0"></i>
+            <input type="text" pInputText size="50" placeholder="Filtro global" (input)="dt.filterGlobal($event.target.value, 'contains')"
+              style="width:auto">
+          </div>
+        </div>
+      </ng-template>
+      <ng-template pTemplate="header" let-columns>
+        <tr>
+          <th *ngFor="let col of cols" [pSortableColumn]="col.field" class="text-table">
+            {{col.header}}
+            <p-sortIcon [field]="col.field"></p-sortIcon>
+          </th>
+        </tr>
+      </ng-template>
+      <ng-template pTemplate="body" let-car>
+        <tr>
+          <td *ngFor="let col of cols" class="text-table">
+            {{car[col.field]}}
+          </td>
+        </tr>
+      </ng-template>
+    </p-table>
+    <!-- <br>
+    <br>
     <button type="button" class="btn btn-danger"><i class="fa fa-print"></i></button>
-    <button type="button" class="btn btn-success" style="margin-left: 5px;"><i class="fa fa-file-excel-o"></i></button>
+    <button type="button" class="btn btn-success" style="margin-left: 5px;"><i class="fa fa-file-excel-o"></i></button> -->
   </div>
 
   <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel"
